# shadowquic

./: .gitignore  CHANGES.html  Cargo.toml  Cross.toml  PROTOCOL.typ  README.md  flake.nix
.github/: Dockerfile  dependabot.yaml
.github/workflows/: doc.yml  doc.yml.disabled  mkdocs.yaml  release.yml  test.yml
assets/certs/: MyCA.key  MyCA.pem  MyCA.srl  localhost.crt  localhost.csr  localhost.key
assets/sites/: .gitignore  README.md  gen_docs.py  mkdocs.yml  pyproject.toml  zensical.toml
document/: api.md  windows.md
document/clients/: windows.md
perf/: Cargo.toml
scripts/: basic_test.py  dnstest.py  linux_install.sh  main_test.py  protect_socket_server.py  pyproject.toml  test_fullcone.sh  test_tproxy.py  test_tproxy.sh
scripts/test_suite/: basic_test.py  test_detection.py  test_tproxy.py
shadowquic/: Cargo.toml
shadowquic-lib/: Cargo.toml
shadowquic-lib/config_examples/: client.yaml  server.yaml
shadowquic-lib/examples/: client_server.rs
shadowquic-lib/src/: direct.rs  error.rs  lib.rs  main.rs  shadowquic.rs  socks.rs
shadowquic-lib/src/config/: mod.rs
shadowquic-lib/src/msgs/: mod.rs  shadowquic.rs  socks5.rs
shadowquic-lib/src/shadowquic/: inbound.rs  mod.rs  outbound.rs
shadowquic-lib/src/socks/: inbound.rs  mod.rs
shadowquic-lib/tests/: dns_udp.rs  mod.rs
shadowquic-macros/: Cargo.toml
shadowquic-macros/src/: lib.rs
shadowquic/config_examples/: client.yaml  client_shimtls.yaml  client_sunnyquic.yaml  compose.yaml  server.yaml  server_shimtls.yaml  server_sunnyquic.yaml  socks2socks.yaml
shadowquic/examples/: client_server.rs  dns_request.rs  udp2socks.rs
shadowquic/src/: error.rs  lib.rs  main.rs  rebind.rs
shadowquic/src/config/: mod.rs  shadowquic.rs  shimtls.rs  sunnyquic.rs  sunquic.rs  tcp.rs
shadowquic/src/direct/: outbound.rs
shadowquic/src/http/: inbound.rs
shadowquic/src/mixed/: inbound.rs
shadowquic/src/msgs/: mod.rs  shadowquic.rs  socks5.rs  socks5_addr_test.rs  squic.rs
shadowquic/src/observe/: imple.rs  mod.rs  unimpl.rs
shadowquic/src/proxy_transform/: mod.rs
shadowquic/src/proxy_transform/jls/: outbound.rs  test.rs
shadowquic/src/proxy_transform/sq_shim/: mod.rs  test_udp_to_tcp.rs
shadowquic/src/proxy_transform/tcp/: inbound.rs  outbound.rs
shadowquic/src/proxy_transform/tls/: inbound.rs  mod.rs  outbound.rs  test.rs
shadowquic/src/quic/: gm_quic_wrapper.rs  mod.rs  quinn_wrapper.rs
shadowquic/src/shadowquic/: inbound.rs  mod.rs  outbound.rs  quinn_wrapper.rs
shadowquic/src/shadowquic/quinn_wrapper/: brutal.rs  wrapper.rs
shadowquic/src/shimtls/: mod.rs
shadowquic/src/socks/: inbound.rs  mod.rs  outbound.rs
shadowquic/src/squic/: inbound.rs  mod.rs  outbound.rs
shadowquic/src/sunnyquic/: dynamic_cert.rs  gm_quic_wrapper.rs  inbound.rs  iroh_wrapper.rs  mod.rs  outbound.rs  unimplemented.rs
shadowquic/src/sunnyquic/iroh_wrapper/: brutal.rs  wrapper.rs
shadowquic/src/tcp/: inbound.rs  mod.rs  outbound.rs  test.rs
shadowquic/src/tls/: inbound.rs
shadowquic/src/tproxy/: inbound.rs
shadowquic/src/transport/: mod.rs
shadowquic/src/utils/: dual_socket.rs  mod.rs  port_union.rs  protect_socket.rs  socket_helper.rs  socket_opt.rs  tracked_stream.rs  udp_dst.rs  udphop.rs
shadowquic/tests/: authed_username.rs  auto_reload_cert.rs  dns_udp.rs  fail_auth_sunnyquic.rs  get_peer_conn_stats.rs  http_proxy.rs  mod.rs  parse_bps.rs  parse_duration.rs  repro_self_signed.rs  run_tproxy_test.sh  shadowquic_user_api.rs  socks_out.rs  socks_out_dual_stack.rs  sunnyquic_user_api.rs  tcp_echo.rs  tcp_echo_sunnyquic.rs  tcp_tfo.rs  tproxy_echo.rs  udp_overdatagram_echo.rs  udp_overdatagram_echo_sunnyquic.rs  udp_overstream_echo.rs  udp_overstream_echo_sunnyquic.rs
ui-tests/: Cargo.toml
