[workspace]
members = ["shadowquic", "shadowquic-macros","perf"]
default-members = ["shadowquic"]
resolver = "3"


[workspace.package]
version = "0.3.3"
edition = "2024"
authors = ["spongebob888"]
categories = ["proxy", "quic"]
keywords = ["quic", "sni"]
homepage = "https://github.com/spongebob888/shadowquic"
repository = "https://github.com/spongebob888/shadowquic.git"
description = "A 0-RTT QUIC Proxy with SNI camouflage"
license = "MIT"
readme = "README.md"


[workspace.dependencies]

[patch."https://github.com/hrimfaxi/iroh_quinn"]
iroh-quinn = { git = "https://github.com/happytrudy/iroh_quinn", branch = "brutal" }
iroh-quinn-proto = { git = "https://github.com/happytrudy/iroh_quinn", branch = "brutal" }
