[package]
name = "perf"
version = "0.1.0"
repository = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "udp"
bench = false

[dependencies]
shadowquic = {path = "../shadowquic"}
thiserror = "2.0.12"
tokio = {version = "1.45.1", features = ["io-util", "net","rt","macros","rt-multi-thread"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "ansi", "time", "local-time"]}
quinn = { package = "quinn", git = "https://github.com/spongebob888/quinn-jls", branch = "jls-dev", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { package = "rustls", git = "https://github.com/spongebob888/rustls-jls", branch = "jls-dev", default-features = false, features = ["std","ring"]}
rcgen = { version = "0.13", default-features = false, features = ["crypto","ring"] }
bytes = "1.10.1"
async-trait = "0.1.88"
webpki-roots = "1.0.0"
fast-socks5 = "0.10.0"
[dev-dependencies]
