[package]
name = "shadowquic-macros"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true}


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["extra-traits"] }


