[package]
name = "shadowquic"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true}

[features]
default = ["quinn"]
tokio-console = ["dep:console-subscriber","tokio/tracing"]
quinn = ["dep:quinn"]

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["io-util", "net","rt","macros","rt-multi-thread"]}
tracing = "0.1.43"
time = { version = "=0.3.44", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi", "time", "local-time"]}
quinn = { package = "quinn", git = "https://github.com/spongebob888/quinn-jls", version = "0.11.7-0.2.1", default-features = false, features = ["runtime-tokio", "rustls-ring"],optional = true}


rustls = { package = "rustls", git = "https://github.com/spongebob888/rustls-jls", version = "0.23.25-1.1.0", default-features = false, features = ["std","ring"]}
rcgen = { version = "0.14", default-features = false, features = ["crypto","ring"] }
bytes = "1.11.0"
async-trait = "0.1.89"
webpki-roots = "1.0.4"
shadowquic-macros = {path = "../shadowquic-macros", version = "*"}
yaml-rust2 = "0.10.4"
serde = { version = "1.0.228", features = ["derive"]}
serde_yaml = "0.9.34"
clap = { version = "4", features = ["derive"] }
educe = "0.6.0"
socket2 = "0.6.1"

console-subscriber = { version = "0.5.0", optional = true }

[target.'cfg(target_os="android")'.dependencies]
sendfd = { version = "0.4.4", features = ["tokio"] }

[dev-dependencies]
fast-socks5 = "0.10.0"
rand = "0.9.2"


