[package]
name = "shadowquic"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true}
readme = { workspace = true}
[features]
default = ["shadowquic-quinn", "sunnyquic-iroh-quinn", "ring"]
ring = [
    "dep:ring",
    "quinn?/rustls-ring",
    "quinn_proto?/rustls-ring",
    "rustls_jls?/ring",
    "iroh-quinn?/rustls-ring",
    "iroh-quinn-proto?/rustls-ring",
    "rustls?/ring",
    "rcgen/ring",
]
aws-lc-rs = [
    "dep:aws-lc-rs",
    "quinn?/rustls-aws-lc-rs",
    "quinn_proto?/rustls-aws-lc-rs",
    "rustls_jls?/aws_lc_rs",
    "iroh-quinn?/rustls-aws-lc-rs",
    "iroh-quinn-proto?/rustls-aws-lc-rs",
    "rustls?/aws-lc-rs",
    "rcgen/aws_lc_rs",
]
tokio-console = ["dep:console-subscriber","tokio/tracing"]
shadowquic-quinn = ["dep:quinn","dep:rustls_jls", "dep:quinn_proto"]
sunnyquic-gm-quic = ["dep:gm-quic","dep:qevent","dep:qbase","dep:qunreliable", "dep:rustls","dep:rustls-native-certs","dep:arc-swap","dep:notify"]
sunnyquic-iroh-quinn = ["dep:iroh-quinn", "dep:rustls", "dep:rustls-native-certs","dep:arc-swap","dep:notify", "dep:iroh-quinn-proto"]

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["io-util", "net","rt","macros","rt-multi-thread"]}
tracing = "0.1.44"
time = { version = "0.3.47", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi", "time", "local-time"]}
quinn = { package = "quinn-jls", version = "0.3.3", default-features = false, features = ["runtime-tokio"], optional = true}
quinn_proto = { package = "quinn-proto-jls", version = "0.3.4", default-features = false, optional = true}
#quinn = { package = "quinn", git = "https://github.com/spongebob888/quinn-jls", branch = "jls-main", default-features = false, features = ["runtime-tokio"], optional = true}
#quinn_proto = { package = "quinn-proto", git = "https://github.com/spongebob888/quinn-jls", branch = "jls-main", default-features = false, optional = true}

#brutal-core = { git = "https://github.com/hrimfaxi/brutal_quinn.git", branch = "master" }
brutal-core = { version = "0.1.0" }
rustls_jls = { package = "rustls-jls", version = "1.3.1", default-features = false, features = ["std"], optional = true}

rcgen = { version = "0.14", default-features = false, features = ["crypto"] }
bytes = "1.11.0"
async-trait = "0.1.89"
webpki-roots = "1.0.7"
shadowquic-macros = { path = "../shadowquic-macros", version = "0.3.3" }
yaml-rust2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"]}
clap = { version = "4", features = ["derive"] }
educe = "0.6.0"
socket2 = "0.6.2"

gm-quic = { version = "0.4", default-features = false, optional = true}
qevent = { version = "0.5", default-features = false, optional = true}
qbase = { version = "0.5", default-features = false, optional = true}
qunreliable = { version = "0.4", default-features = false, optional = true}
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true}
rustls-native-certs = {version = "0.8.3", optional = true}

# iroh-quinn = { git = "https://github.com/hrimfaxi/iroh_quinn", branch = "main", package = "noq", optional = true, default-features = false, features = ["rustls-ring", "runtime-tokio"] }
# iroh-quinn-proto = { git = "https://github.com/hrimfaxi/iroh_quinn", branch = "main", package = "noq-proto", optional = true, default-features = false, features = ["rustls-ring"] }

iroh-quinn ={ version = "0.16.1",optional = true, default-features = false, features = ["runtime-tokio"]}
iroh-quinn-proto ={ version = "0.15.1",optional = true, default-features = false}


notify = { version = "8.2.0", features = ["serde"], optional = true}
arc-swap = { version = "1.9.1", optional = true }

console-subscriber = { version = "0.5.0", optional = true }
serde-saphyr = "0.0.26"
aws-lc-rs = { version = "1", optional = true, default-features = false }
ring = { version = "0.17.14", optional = true }

[target.'cfg(target_os="android")'.dependencies]
sendfd = { version = "0.4.4", features = ["tokio"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
] }

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
fast-socks5 = "1.0.0"
rand = "0.10.1"


